--- a/majorca.html
+++ b/majorca.html
@@ -3,7 +3,11 @@
     <head>
 <!--         Add all required tags in the head here - meta tags for SEO, responsiveness, and with info about the page, etc., in addition to tags to create a card on Twitter with a large image and open graph tags to allow for sharing on other social media sites -->
     <meta charset="UTF-8">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Wunderlust Travel">
+    <meta name="description" content="Plan your dream vacation with Wunderlust Travel and explore Majorca, a beautiful island surrounded by blue waters and filled with gold sand, coves, and vibrant city villages!">
+    <meta name="keywords" content="travel, plan, blue waters, sand, island, vacation">
+    <meta name="robots" content="index, follow">
     </head>
     <body>
 <!--         Reveiew the document and add the proper tags to all of the headings  throughout. Use the outline feature in the validator to ensure that these have been added correctly. See the image of the correct outline as a reference if you have questions 
